@@ -1,0 +1,143 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="ja_JP">
+<context>
+    <name>QtGnuplotWidget</name>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="205"/>
+        <source>Export to PDF</source>
+        <translation>PDF形式でエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="205"/>
+        <source>PDF files (*.pdf)</source>
+        <translation>PDF (*.pdf)</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="227"/>
+        <source>Export to Image</source>
+        <translation>画像としてエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="228"/>
+        <source>Image files (*.png *.bmp)</source>
+        <translation>画像 (*.png *.bmp)</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="240"/>
+        <source>Export to SVG</source>
+        <translation>SVG形式でエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWidget.cpp" line="240"/>
+        <source>SVG files (*.svg)</source>
+        <translation>SVG (*.svg)</translation>
+    </message>
+</context>
+<context>
+    <name>QtGnuplotWindow</name>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="71"/>
+        <source>Qt frontend for gnuplot</source>
+        <translation>gnuplotのためのQtフロントエンド</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="74"/>
+        <source>Copy to clipboard</source>
+        <translation>クリップボードにコピー</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="75"/>
+        <source>Print</source>
+        <translation>印刷</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="76"/>
+        <source>Export</source>
+        <translation>エクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="77"/>
+        <source>Export to PDF</source>
+        <translation>PDF形式でエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="78"/>
+        <source>Export to EPS</source>
+        <translation>EPS形式でエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="79"/>
+        <source>Export to SVG</source>
+        <translation>SVG形式でエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="80"/>
+        <source>Export to image</source>
+        <translation>画像としてエクスポート</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="81"/>
+        <source>Settings</source>
+        <translation>設定</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="98"/>
+        <source>Replot</source>
+        <translation>再描画</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="99"/>
+        <source>Show grid</source>
+        <translation>グリッド線を表示</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="100"/>
+        <source>Previous zoom</source>
+        <translation>前のズーム設定</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="101"/>
+        <source>Next zoom</source>
+        <translation>次のズーム設定</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="102"/>
+        <source>Autoscale</source>
+        <translation>自動でスケーリング</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotWindow.cpp" line="132"/>
+        <source>Gnuplot window </source>
+        <translation type="unfinished">Gnuplotウィンドウ </translation>
+    </message>
+</context>
+<context>
+    <name>settingsDialog</name>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="14"/>
+        <source>Terminal configuration</source>
+        <translation>ターミナルの設定</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="28"/>
+        <source>Select background color</source>
+        <translation>背景色を選択</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="48"/>
+        <source>Sample</source>
+        <translation>サンプル</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="57"/>
+        <source>Antialias</source>
+        <translation>アンチエイリアス</translation>
+    </message>
+    <message>
+        <location filename="../QtGnuplotSettings.ui" line="64"/>
+        <source>Replot on resize</source>
+        <translation>リサイズ時に再描画する</translation>
+    </message>
+</context>
+</TS>
