@@ -1,5 +1,9 @@
 2009-07-28  Jérôme Lodewyck <lodewyck@users.sourceforge.net>
 
+	* qtterminal/po/qtgnuplot_ja.ts: Japanese translation. Closes patch 2828290
+
+2009-07-28  Jérôme Lodewyck <lodewyck@users.sourceforge.net>
+
 	* qtterminal/qt_term.cpp: When consecutive motion events are received, only
 	process the last one.
 	* src/Makefile.am: Fix make rules for embed_example
